# First-approach-to-crimes

backend/: Cargo.toml
backend/address_2_coord/: Cargo.toml
backend/address_2_coord/src/: main.rs
backend/clustering/: Cargo.toml
backend/clustering/src/: main.rs
backend/res/: address2coord
backend/src/: main.rs
data/: COBRA-YTD2017.csv  COBRA-YTD2017.xlsx  COBRADATA2016.xlsx  sample.csv
frontend/: aaa.ts  atlanta.json  cluster.json  geo.json  heatmap.js  index.html  main.js  script.js  script2.js  style.css  timeBars.js  typesBars.js
libs/clustering/: Cargo.toml
libs/clustering/src/: lib.rs
libs/kernel/: Cargo.toml
libs/kernel/src/: lib.rs
libs/record/: Cargo.toml
libs/record/src/: lib.rs
